Button Fix, now visible on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,8 @@ body {
 }
 
 .navbar button {
-  background-color: transparent;
+  background-color: white;
+  opacity: 0.3;
 }
 
 .navbar button:hover {
